# Kros

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: compile_commands_trigger.cpp.2D7B22249A905FB7.idx  compile_commands_trigger.cpp.353DC94583746D36.idx  compile_commands_trigger.cpp.9EBD99DB44A3932C.idx
classfile/: magic.h
memory/: allStatic.hpp  allocation.h  allocation.hpp  arena.cpp  arena.hpp  iterator.cpp  iterator.hpp  memRegion.hpp  physicalSpace.hpp  virtualSpace.hpp
memory/gc/: gcHeap.hpp  globals.h  heap.hpp  markBitMap.hpp  tlab.hpp  workGroup.hpp  worker.hpp
memory/gc/base/: gcHeap.hpp
oops/: class.h  class.hpp  constants.h  markWord.h  markWord.hpp  markWord.hpp.abandoned  oop.cpp  oop.h  oop.hpp  symbol.h  type.hpp  typeDesc.hpp
port/osx/runtime/: thread.cpp
port/posix/runtime/: thread.cpp
runtime/: atomic.c  atomic.h  atomic.hpp  debug.h  exit.h  globals.h  globals.hpp  mutex.hpp  os.hpp  semaphore.hpp  thread.hpp  threadCritical.hpp  vmFlag.hpp
runtime/vmFlag/: allFlags.h  vmFlag.cpp  vmFlag.hpp  vmFlagTable.cpp  vmFlagTable.hpp
util/: align.h  any.h  array.c  array.h  array.hpp  average.hpp  bits.h  bool.h  closure.h  containerof.h  debug.h  globals.h  hashTable.hpp  hashmap.h  hashtable.c  hashtable.h  int.h  linkedList.hpp  linkedlist.h  lockFreeStack.h  lockfreeStack.hpp  macros.h  outputStream.hpp  pair.h  pair.hpp  stack.hpp
utils/: align.h  array.hpp  average.hpp  bitMap.hpp  containerof.h  globals.h  hashTable.hpp.abandoned  int.h  linkedList.hpp  lockfreeStack.hpp  macros.h  outputStream.hpp  pair.hpp  stack.hpp
(+1 files in other folders)
